centering of social icons on mobile fixed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -529,19 +529,19 @@ body {
     place-content: center;
         grid-template-areas: "logo" "links" "socials" "copyrights";
   }
+  .footer__icons {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-area: socials;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
   .logo {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     grid-area: logo;
     width: 60%;
     margin: 0 auto;
-  }
-  __icons {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    grid-area: socials;
-    -ms-grid-column-align: center;
-        justify-self: center;
   }
   ul {
     -ms-grid-row: 2;
